--- a/public/style.css
+++ b/public/style.css
@@ -21,13 +21,13 @@ ul {
     transform: scaleX(1); } }
 @keyframes scaleAnimX {
   0% {
-    -webkit-transform: scaleX(0);
-    -ms-transform: scaleX(0);
-    transform: scaleX(0); }
+    -webkit-transform: translateY(-50%) scaleY(0);
+    -ms-transform: translateY(-50%) scaleY(0);
+    transform: translateY(-50%) scaleY(0); }
   100% {
-    -webkit-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    transform: scaleX(1); } }
+    -webkit-transform: translateY(0) scaleY(1);
+    -ms-transform: translateY(0) scaleY(1);
+    transform: translateY(0) scaleY(1); } }
 @-webkit-keyframes scaleAnimY {
   0% {
     -webkit-transform: scaleY(0);
@@ -327,6 +327,10 @@ ul {
 .cart__img {
   margin-top: 8px; }
 
+.cart__img img {
+  max-width: 100px;
+  max-height: 115px; }
+
 .cart__container__drop {
   position: absolute;
   z-index: 99;
@@ -368,7 +372,13 @@ ul {
   /*         animation: showDiv 0.5s;*/
   -webkit-transform: scaleX(0);
   -ms-transform: scaleX(0);
-  transform: scaleX(0); }
+  transform: scaleX(0);
+  max-height: 75vh;
+  overflow: scroll;
+  -ms-overflow-style: none; }
+
+.cart__drop::-webkit-scrollbar {
+  width: 0; }
 
 .cart__container:hover .cart__drop {
   display: block;
@@ -457,6 +467,10 @@ ul {
   -o-transition: all 0.3s;
   transition: all 0.3s; }
 
+.cart__item__img img {
+  max-height: 85px;
+  max-width: 72px; }
+
 .cart__item__img:hover {
   -webkit-transform: scale(1.07);
   -ms-transform: scale(1.07);
@@ -542,8 +556,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   opacity: 1;
-  -webkit-animation: scaleAnimY 0.3s;
-  animation: scaleAnimY 0.3s; }
+  -webkit-animation: scaleAnimX 0.3s;
+  animation: scaleAnimX 0.3s; }
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .nav__drop {
@@ -769,6 +783,7 @@ ul {
 
 .featured__price,
 .featured__title {
+  max-width: 250px;
   line-height: 11px;
   margin: 17px 0 15px 17px; }
 
@@ -1491,6 +1506,7 @@ ul {
   flex-wrap: wrap; }
 
 .products_item {
+  max-width: 263px;
   min-height: 364px;
   margin-bottom: 36px;
   -webkit-transition: all 0.3s;
@@ -2222,5 +2238,36 @@ ul {
     top: 5px; }
     .checkout__link:hover {
       color: #f16d7f; }
+
+.error-msg {
+  padding: 30px 20px;
+  background-color: red;
+  color: white;
+  position: relative; }
+
+.error-block {
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  display: flex;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  align-items: center; }
+
+.close-btn {
+  font-size: 1.5em;
+  top: -40px;
+  position: absolute;
+  right: 0;
+  background: none;
+  border: none;
+  color: white;
+  font-weight: bold; }
+
+.cartempty_text {
+  font-size: 3em;
+  color: #f16d7f;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
