--- a/public/style.css
+++ b/public/style.css
@@ -2249,8 +2249,9 @@ ul {
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   align-items: center; }
